fix spacing for page titles with backgrounds

--- a/src/scss/frontend/_.scss
+++ b/src/scss/frontend/_.scss
@@ -37,12 +37,12 @@ body.disable_bottom_padding > main {
 }
 
 .page_title {
-	padding-top: 1em;
+	padding-top: 1rem;
 	text-align: center;
 
 	&.has-header-background {
-		padding-top: 3em;
-		padding-bottom: 2em;
+		padding-top: 3rem;
+		padding-bottom: 2rem;
 		margin-bottom: var(--page_title-margin_below_header);
 	}
 	background-color: var(--page_title-background_color);
